Fixed buttons alignment

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ body {
     padding: 10px;
     border: none;
     cursor: pointer;
-    width: 20%;
+    width: 10rem;
     font-size: 1em;
   }
 
